// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-AxiKw imZcOv"
>
  <li
    className="sc-AxhCb ePgITk"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxhCb ePgITk"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxhCb ePgITk"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-AxiKw imZcOv"
>
  <li
    className="sc-AxhCb KZTgI"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxhCb KZTgI"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxhCb KZTgI"
    onClick={[Function]}
  >
    <span
      className="sc-fznBtT bYOriI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
